--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  min-width: 1440px;
   min-height: 100%;
   margin: 0;
   font-family: "Rubik", sans-serif;
@@ -49,7 +50,7 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-  }
+}
 
 .page-header {
   width: 1160px;
@@ -778,7 +779,7 @@ body {
 
 .service-list-btn::before {
   position: absolute;
-  content: '';
+  content: "";
   top: 0;
   left: 280px;
   width: 7px;
@@ -796,7 +797,7 @@ body {
 
 .service-btn {
   display: block;
-  width: 152px;
+  width: 160px;
   padding-top: 9px;
   padding-bottom: 11px;
   padding-left: 15px;
@@ -842,6 +843,14 @@ body {
   width: 160px;
   background-color: #FFE17F;
   z-index: -1;
+}
+
+.service-hidden-btn:hover {
+  background-color: #FFE17F;
+}
+
+.service-hidden-btn:active {
+  background-color: #FFCC33;
 }
 
 .service-hidden-btn:focus {
@@ -1291,7 +1300,7 @@ body {
 }
 
 .footer-services {
-  margin-right: 150px;
+  margin-right: 180px;
 }
 
 .footer-services-link {
@@ -1445,6 +1454,7 @@ body {
 .breadcrumbs {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   margin: 0 0 0 20px;
   padding: 0;
   list-style-type: none;
@@ -1652,15 +1662,15 @@ body {
   background-repeat: no-repeat;
 }
 
-.control-input[type="checkbox"]:checked+.control-mark {
+.control-input[type="checkbox"]:checked + .control-mark {
   border: 2px solid #000000;
 }
 
-.control-input[type="radio"]+.control-mark {
+.control-input[type="radio"] + .control-mark {
   border-radius: 50%;
 }
 
-.control-input[type="radio"]:checked+.control-mark::before {
+.control-input[type="radio"]:checked + .control-mark::before {
   position: absolute;
   content: "";
   top: 4px;
@@ -1671,7 +1681,7 @@ body {
   border-radius: 50%;
 }
 
-.control-input[type="radio"]:checked+.control-mark {
+.control-input[type="radio"]:checked + .control-mark {
   border: 2px solid #000000;
 }
 
@@ -1962,7 +1972,15 @@ body {
 }
 
 .product-card:active .product-card-button::before {
-  background-color: #FFCC33;;
+  background-color: #FFCC33;
+}
+
+.product-card-button:hover {
+  background-color: #FFE17F;
+}
+
+.product-card-button:active {
+  background-color: #FFCC33;
 }
 
 .pagination-show-more {
@@ -2342,6 +2360,10 @@ body {
 .quantity-input::-webkit-outer-spin-button,
 .quantity-input::-webkit-inner-spin-button  {
   -webkit-appearance: none;
+}
+
+.quantity-input {
+  -moz-appearance: textfield;
 }
 
 .quantity-button {
